--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs = -Xmx3G
 
 # Mod Information
 mod_version = 1.0
-maven_group = cn.taskeren
+maven_group = cn.elytra.mod.bandit
 mod_id = bandit
 archives_base_name = bandit
 
